--- a/Plugin/Makefile
+++ b/Plugin/Makefile
@@ -1,11 +1,11 @@
 PLUGINNAME = GMIC
 PLUGINOBJECTS = GMIC.o
-RESOURCES = fr.inria.openfx.GMIC.png
 
 SRCDIR = ..
 PATHTOROOT = $(SRCDIR)/OpenFX/Examples
 include Makefile.master
 
+RESOURCES = GMIC.png $(SRCDIR)/GMIC/gmic_stdlib.gmic
 CXXFLAGS += -I$(SRCDIR)/Common -I$(SRCDIR)/GMIC -I$(SRCDIR)/OpenFX/include -I$(SRCDIR)/OpenFX/Examples/include
 LINKFLAGS += -lcgmic
 
