--- a/Plugin/Makefile
+++ b/Plugin/Makefile
@@ -5,9 +5,17 @@ SRCDIR = ..
 PATHTOROOT = $(SRCDIR)/OpenFX/Examples
 include Makefile.master
 
-RESOURCES = GMIC.png $(SRCDIR)/GMIC/gmic_stdlib.gmic
-CXXFLAGS += -I$(SRCDIR)/Common -I$(SRCDIR)/GMIC -I$(SRCDIR)/OpenFX/include -I$(SRCDIR)/OpenFX/Examples/include
-LINKFLAGS += -L$(SRCDIR)/GMIC -lcgmic
+RESOURCES = GMIC.png
+
+CXXFLAGS += \
+-I$(SRCDIR)/Common \
+-I$(SRCDIR)/GMIC \
+-I$(SRCDIR)/OpenFX/include \
+-I$(SRCDIR)/OpenFX/Examples/include
+
+LINKFLAGS += \
+-lcgmic \
+-L$(SRCDIR)/GMIC
 
 VPATH += \
 $(SRCDIR)/GMIC \
