--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "OpenFX"]
+[submodule "openfx"]
 	path = openfx
-	url = https://github.com/NatronGitHub/openfx
+	url = https://github.com/NatronGitHub/openfx.git
