--- a/.gitignore
+++ b/.gitignore
@@ -175,51 +175,16 @@ Desktop.ini
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
-Plugin/CImg.h
-Plugin/gmic.cpp
-Plugin/gmic.h
-Plugin/gmic_libc.cpp
-Plugin/gmic_libc.h
-Plugin/gmic_stdlib.h
-Plugin/gmic_stdlib_gmic.h
-CImg/gmic_def.h
+CImg.h
+gmic.cpp
+gmic.h
+gmic_libc.cpp
+gmic_libc.h
+gmic_stdlib.h
+gmic_stdlib_gmic.h
 ofxTestLog.txt
 
 # QtCreator user files
 *.creator.user
-
-Shadertoy/ShadertoyParse
-Shadertoy/ShadertoyParse.dSYM
-Shadertoy/presets/cube00_0.jpg
-Shadertoy/presets/cube01_0.png
-Shadertoy/presets/cube02_0.jpg
-Shadertoy/presets/cube03_0.png
-Shadertoy/presets/cube04_0.png
-Shadertoy/presets/cube05_0.png
-Shadertoy/presets/tex00.jpg
-Shadertoy/presets/tex01.jpg
-Shadertoy/presets/tex02.jpg
-Shadertoy/presets/tex03.jpg
-Shadertoy/presets/tex04.jpg
-Shadertoy/presets/tex05.jpg
-Shadertoy/presets/tex06.jpg
-Shadertoy/presets/tex07.jpg
-Shadertoy/presets/tex08.jpg
-Shadertoy/presets/tex09.jpg
-Shadertoy/presets/tex10.png
-Shadertoy/presets/tex11.png
-Shadertoy/presets/tex12.png
-Shadertoy/presets/tex14.png
-Shadertoy/presets/tex15.png
-Shadertoy/presets/tex16.png
-Shadertoy/presets/tex17.jpg
-Shadertoy/presets/tex18.jpg
-Shadertoy/presets/tex19.png
-Shadertoy/presets/tex20.jpg
-Shadertoy/presets/tex21.png
-Shadertoy/presets/vid00.ogv
-Shadertoy/presets/vid01.webm
-Shadertoy/presets/vid02.ogv
-Shadertoy/presets/vid03.webm
 
 *.bak
