--- a/.travis.yml
+++ b/.travis.yml
@@ -38,10 +38,10 @@ before_install:
     fi
   - export J='-j3'
   - if [ ${TRAVIS_OS_NAME} = "linux" ]; then
-      sudo apt-get install libfftw3-dev
+      sudo apt-get install libfftw3-dev;
     fi
   - if [ ${TRAVIS_OS_NAME} = "osx" ]; then
-      brew install fftw
+      brew install fftw;
     fi
 
 install:
