--- a/GMIC_OFX/Makefile
+++ b/GMIC_OFX/Makefile
@@ -14,10 +14,19 @@ CXXFLAGS += \
 -I$(SRCDIR)/Helpers \
 -I$(SRCDIR)/openfx/include \
 -I$(SRCDIR)/openfx/Examples/include \
--Dgmic_build -Dgmic_is_parallel -Dcimg_use_abort -Dcimg_display=0 -Dcimg_appname=\"gmic\" -Dcimg_namespace_suffix=openfx_gmic -Dcimg_verbosity=0 -Dcimg_library=cimg_library_openfx_gmic \
--Dcimg_use_zlib -Dcimg_use_fftw3
+-Dgmic_build -Dgmic_is_parallel -Dcimg_use_abort -Dcimg_display=0 -Dcimg_appname=\"gmic\" -Dcimg_namespace_suffix=openfx_gmic -Dcimg_verbosity=0 -Dcimg_library=cimg_library_openfx_gmic
 
-LINKFLAGS += -lfftw3 -lfftw3_threads -lz
+# FFTW (license: GPLv2), necessary to get Fourier transform on
+# images with dimensions that are not power-of-two
+FFTW3_CXXFLAGS =`pkg-config --cflags fftw3` -Dcimg_use_fftw3
+FFTW3_LINKFLAGS =`pkg-config --libs fftw3` -lfftw3_threads
+
+# Zlib, necessary to uncompress the glic stdlib
+ZLIB_CXXFLAGS=`pkg-config --cflags zlib` -Dcimg_use_zlib
+ZLIB_LINKFLAGS=`pkg-config --libs zlib`
+
+CXXFLAGS += $(FFTW3_CXXFLAGS) $(ZLIB_CXXFLAGS)
+LINKFLAGS += $(FFTW3_LINKFLAGS) $(ZLIB_LINKFLAGS)
 
 VPATH = $(SRCDIR):$(SRCDIR)/Helpers
 
