package libcurl with openfx-gmic

--- a/GMIC_OFX/Makefile
+++ b/GMIC_OFX/Makefile
@@ -15,7 +15,14 @@ CXXFLAGS += \
 -I$(SRCDIR)/Helpers \
 -I$(SRCDIR)/openfx/include \
 -I$(SRCDIR)/openfx/Examples/include \
--Dgmic_build -Dgmic_is_parallel -Dcimg_use_abort -Dcimg_display=0 -Dcimg_appname=\"gmic\" -Dcimg_namespace_suffix=openfx_gmic -Dcimg_verbosity=0 -Dcimg_library=cimg_library_openfx_gmic -Dgmic_is_parallel
+-Dgmic_build \
+-Dgmic_is_parallel \
+-Dcimg_use_abort \
+-Dcimg_display=0 \
+-Dcimg_appname=\"gmic\" \
+-Dcimg_namespace_suffix=openfx_gmic \
+-Dcimg_verbosity=0 \
+-Dcimg_library=cimg_library_openfx_gmic
 
 # FFTW (license: GPLv2), necessary to get Fourier transform on
 # images with dimensions that are not power-of-two
@@ -30,8 +37,12 @@ endif
 ZLIB_CXXFLAGS=`pkg-config --cflags zlib` -Dcimg_use_zlib
 ZLIB_LINKFLAGS=`pkg-config --libs zlib`
 
-CXXFLAGS += $(FFTW3_CXXFLAGS) $(ZLIB_CXXFLAGS)
-LINKFLAGS += $(FFTW3_LINKFLAGS) $(ZLIB_LINKFLAGS)
+# libcurl, necessary to download presets:
+LIBCURL_CXXFLAGS=`pkg-config --cflags libcurl` -Dcimg_use_curl
+LIBCURL_LINKFLAGS=`pkg-config --libs libcurl`
+
+CXXFLAGS += $(FFTW3_CXXFLAGS) $(ZLIB_CXXFLAGS) $(LIBCURL_CXXFLAGS)
+LINKFLAGS += $(FFTW3_LINKFLAGS) $(ZLIB_LINKFLAGS) $(LIBCURL_LINKFLAGS)
 
 VPATH = $(SRCDIR):$(SRCDIR)/Helpers
 
